--- a/src/app/protected/edu/lessons/challenges/challenges.component.html
+++ b/src/app/protected/edu/lessons/challenges/challenges.component.html
@@ -88,23 +88,10 @@
     </ionic-selectable>
   </ion-item>
   <ion-buttons slot="end">
-    <ion-button size="small" fill="solid" (click)="close(false)" matTooltip="{{'Close'|translate}}">
-      <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
-    </ion-button>
-    <ion-popover #popover [isOpen]="isOpen" (didDismiss)="isOpen = false">
-      <ng-template>
-        <ion-toolbar>
-          {{'The changes will be lost if you leave the module.' | translate}}
-        </ion-toolbar>
-        <ion-toolbar>
-          <ion-buttons slot="end">
-            <ion-button size="small" fill="clear" (click)="isOpen=false">{{'Abort'|translate}}</ion-button>
-            <ion-button size="small" fill="clear" (click)="close(true)">{{'Close'|translate}}</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ng-template>
-    </ion-popover>
     <div *ngIf="!authService.isMD()">
+      <ion-button size="small" fill="solid" (click)="close(false)" matTooltip="{{'Close'|translate}}">
+        <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
+      </ion-button>
       <ion-button *ngIf="!selectedChallenge.released" size="small" fill="solid" (click)="save()"
         matTooltip="{{'Save changes' | translate }}"
         [disabled]="!selectedChallenge.description || !selectedChallenge.teachingSubject">
@@ -143,6 +130,9 @@
       <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="start">
+      <ion-fab-button size="small" fill="solid" (click)="close(false)" matTooltip="{{'Close'|translate}}">
+        <ion-icon name="close" color="danger"></ion-icon>
+      </ion-fab-button>
       <ion-fab-button *ngIf="!selectedChallenge.released" size="small" fill="solid" (click)="save()"
         matTooltip="{{'Save changes' | translate }}"
         [disabled]="!selectedChallenge.description || !selectedChallenge.teachingSubject">
@@ -174,6 +164,13 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+  <ion-item *ngIf="!selectedChallenge.released" style="color: green; background-color: lightgray;"
+    (click)="modalAddNewQuestionIsOpen = true">
+    <ion-label>{{ 'New question' | translate }}</ion-label>
+    <ion-button slot="end" size="small" fill="clear" (click)="modalAddNewQuestionIsOpen = true">
+      <ion-icon slot="icon-only" color="success" name="add-circle"></ion-icon>
+    </ion-button>
+  </ion-item>
   <div class="question" *ngFor="let question of selectedChallenge.questions; index as i">
     <ion-item *ngIf="questionToEdit == i" style="background-color: lightgray;" [disabled]="selectedChallenge.released">
       <quill-editor [styles]="editorStyles" [(ngModel)]="selectedChallenge.questions[i].question" name="description">
@@ -253,12 +250,6 @@
       </ion-button>
     </ion-item>
   </div>
-  <ion-item *ngIf="!selectedChallenge.released" style="color: green; background-color: lightgray;">
-    <ion-label>{{ 'New question' | translate }}</ion-label>
-    <ion-button slot="end" size="small" fill="clear" (click)="modalAddNewQuestionIsOpen = true">
-      <ion-icon slot="icon-only" color="success" name="add-circle"></ion-icon>
-    </ion-button>
-  </ion-item>
 </ion-content>
 <!-- modal available on more pages -->
 <ion-modal #modalAddNewQuestion [isOpen]="modalAddNewQuestionIsOpen">
@@ -278,36 +269,44 @@
     </ion-header>
     <ion-content class="ion-padding">
       <ion-list>
+        <ion-list-header lines="full">
+          <ion-label><b>{{'Insert new own question'|translate}}</b></ion-label>
+        </ion-list-header>
         <ion-item>
-          <ion-label position="stacked">{{'Type' | translate}}:</ion-label>
+          <ion-label>{{'Type' | translate}}:</ion-label>
           <ion-select [(ngModel)]="answerType" style="max-width: 200px; margin: 10px; color: black;">
             <ion-select-option value="One">{{'One right answer'|translate}}</ion-select-option>
             <ion-select-option value="Multiple">{{'More right answers'|translate}}</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-label position="stacked">{{ 'value' | translate }}:</ion-label>
+          <ion-label>{{ 'value' | translate }}:</ion-label>
           <ion-input [(ngModel)]="questionValue" type="number" min="1"></ion-input>
         </ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-list-header lines="full">
+          <ion-label><b>{{'Insert existing questions'|translate}}</b></ion-label>
+        </ion-list-header>
         <ion-item>
-          <ion-label position="stacked">{{"Select from existing questions!"|translate}}:</ion-label>
           <ionic-selectable #selectQuestions [(ngModel)]="questionsToAdd" [items]="questions" itemValueField="id"
             itemTextField="question" [canSearch]="true" [isMultiple]="true" (onChange)="addQuestions()">
             <ng-template ionicSelectableHeaderTemplate>
               <ion-toolbar>
-                <ion-title>
-                  {{ questionListPlaceHolder | translate }}<br>
-                  {{ 'Select one or more questions!' | translate}}
-                </ion-title>
+                <b style="font-size:large;">{{ questionListPlaceHolder | translate }}</b><br>
+                <b style="font-size:small">{{ 'teachingSubject'|translate}}: {{ selectedChallenge.teachingSubject.name }}</b><br>
+                <i style="font-size:small">{{ 'Select one or more questions!' | translate}}</i>
                 <ion-buttons slot="end">
                   <ion-button ion-button (click)="selectQuestions.close()">
                     <ion-icon color="danger" name="close"></ion-icon>
                   </ion-button>
-                  <ion-button *ngIf="questionListPlaceHolder.indexOf('CEPHALIX') == -1" size="small" fill="solid" (click)="getQuestionsFromCephalix()"
+                  <ion-button *ngIf="questionListPlaceHolder.indexOf('CEPHALIX') == -1" size="small" fill="solid"
+                    (click)="getQuestionsFromCephalix()"
                     matTooltip="{{'Get challenge questions from CEPHALIX server to the selected subject.' | translate }}">
                     <img src="assets/images/logo/cranix_school.svg" style="height: 32px; width: 32px;">
                   </ion-button>
-                  <ion-button *ngIf="questionListPlaceHolder.indexOf('CEPHALIX') != -1" size="small" fill="solid" (click)="getQuestionsFromServer()"
+                  <ion-button *ngIf="questionListPlaceHolder.indexOf('CEPHALIX') != -1" size="small" fill="solid"
+                    (click)="getQuestionsFromServer()"
                     matTooltip="{{'Get challenge questions from your server to the selected subject.' | translate }}">
                     <ion-icon slot="icon-only" name="download" color="success"></ion-icon>
                   </ion-button>
@@ -355,20 +354,6 @@
     </ion-content>
   </ng-template>
 </ion-modal>
-<ion-popover #popoverDeleteChallenge [isOpen]="popoverDeleteChallengeIsOpen" size="cover">
-  <ng-template>
-    <ion-toolbar>
-      {{'Remove challenge and all archived results.' | translate}}
-    </ion-toolbar>
-    <ion-toolbar>
-      <ion-buttons slot="end">
-        <ion-button size="small" fill="clear" (click)="popoverDeleteChallengeIsOpen=false; challengeToDelete=null;">
-          {{'Abort'|translate}}</ion-button>
-        <ion-button size="small" fill="clear" (click)="deleteChallenge(null)">{{'Remove'|translate}}</ion-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ng-template>
-</ion-popover>
 <ion-modal #popoverStopAndArchive [isOpen]="popoverStopAndArchiveIsOpen" size="auto">
   <ng-template>
     <ion-header>
@@ -391,3 +376,30 @@
     </ion-content>
   </ng-template>
 </ion-modal>
+<ion-popover #popover [isOpen]="isOpen" (didDismiss)="isOpen = false">
+  <ng-template>
+    <ion-toolbar>
+      {{'The changes will be lost if you leave the module.' | translate}}
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-buttons slot="end">
+        <ion-button size="small" fill="clear" (click)="isOpen=false">{{'Abort'|translate}}</ion-button>
+        <ion-button size="small" fill="clear" (click)="close(true)">{{'Close'|translate}}</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ng-template>
+</ion-popover>
+<ion-popover #popoverDeleteChallenge [isOpen]="popoverDeleteChallengeIsOpen" size="cover">
+  <ng-template>
+    <ion-toolbar>
+      {{'Remove challenge and all archived results.' | translate}}
+    </ion-toolbar>
+    <ion-toolbar>
+      <ion-buttons slot="end">
+        <ion-button size="small" fill="clear" (click)="popoverDeleteChallengeIsOpen=false; challengeToDelete=null;">
+          {{'Abort'|translate}}</ion-button>
+        <ion-button size="small" fill="clear" (click)="deleteChallenge(null)">{{'Remove'|translate}}</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ng-template>
+</ion-popover>
