--- a/src/app/protected/cranix/system/addons/system-addons.component.html
+++ b/src/app/protected/cranix/system/addons/system-addons.component.html
@@ -23,4 +23,19 @@
             </ion-select>
         </ion-item>
     </ion-list>
+    <ion-modal [isOpen]="isModalOpen">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-title>{{systemService.selectedAddon}} {{key}}</ion-title>
+              <ion-buttons slot="end">
+                <ion-button (click)="closeModal()">Close</ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding">
+                <div [innerHTML]="modalContent"></div>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
 </ion-content>
