New feature: now the safesearch can be set separately for the search engines and YouTube.   The lists are in /usr/share/cranix/templates/unbound/safesearch/ and schould be symlinked into /etc/unbound/local.d if you want to aktivate it

--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -1,43 +1,46 @@
 <cranix-toolbar title="{{ 'Manage DNS Filter Configuration' | translate}}"></cranix-toolbar>
-<ion-toolbar *ngIf="!authService.isMD()" class="page-toolbar">
-  <ion-buttons slot="end">
+<ion-toolbar class="page-toolbar">
+  <ion-title *ngIf="saving">
+    "{{'The configuration will be saved'|translate}}"
+  </ion-title>
+  <ion-buttons *ngIf="!authService.isMD()" slot="end">
     <ion-button size="small" fill="solid" (click)="writeConfig()" [disabled]="saving"
       matTooltip="{{'Save DNS-Confiugration and restart'| translate }}">
       <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
     </ion-button>
   </ion-buttons>
+  <ion-segment  *ngIf="authService.isMD()" (ionChange)="segmentChanged($event)" color="secondary" value="categories">
+    <ion-segment-button value="good">
+      <ion-icon name="happy" color="success"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="bad">
+      <ion-icon name="sad" color="danger"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button *ngIf="authService.session.name == 'cephalix'" value="cephalix">
+      <img src="assets/images/logo/cranix_school.svg" width="30">
+    </ion-segment-button>
+    <ion-segment-button value="categories">
+      <ion-icon name="stop-circle" color="danger"></ion-icon>
+    </ion-segment-button><ion-segment-button value="safesearch">
+      <ion-icon name="happy" color="success"></ion-icon>
+    </ion-segment-button>
+  </ion-segment>
 </ion-toolbar>
 <ion-item-divider *ngIf="!authService.isMD()"></ion-item-divider>
-<ion-content>
-  <div *ngIf="authService.isMD()">
-    <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="categories">
-      <ion-segment-button value="good">
-        <ion-icon name="happy" color="success"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button value="bad">
-        <ion-icon name="sad" color="danger"></ion-icon>
-      </ion-segment-button>
-      <ion-segment-button *ngIf="authService.session.name == 'cephalix'" value="cephalix">
-        <img src="assets/images/logo/cranix_school.svg" width="30">
-      </ion-segment-button>
-      <ion-segment-button value="categories">
-        <ion-icon name="stop-circle" color="danger"></ion-icon>
-      </ion-segment-button>
-    </ion-segment>
-    <ion-fab vertical="top" horizontal="end" slot="fixed">
-      <ion-fab-button size="small">
-        <ion-icon name="arrow-forward-circle"></ion-icon>
+<ion-content [disabled]="saving">
+  <ion-fab *ngIf="authService.isMD()" vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button size="small">
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list>
+      <ion-fab-button fill="clear" (click)="writeConfig()" [disabled]="saving">
+        <ion-icon name="checkmark" color="success"></ion-icon>
       </ion-fab-button>
-      <ion-fab-list>
-        <ion-fab-button fill="clear" (click)="writeConfig()" [disabled]="saving">
-          <ion-icon name="checkmark" color="success"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab>
-  </div>
+    </ion-fab-list>
+  </ion-fab>
   <ion-grid>
     <ion-row>
-      <ion-col *ngIf="!authService.isMD() || segment=='good'" size="authService.isMD() ? 11 : 4">
+      <ion-col *ngIf="!authService.isMD() || segment=='good'" size="authService.isMD() ? 12 : 3">
         <ion-list>
           <ion-item lines="none">
             <H1>{{'Own White List'|translate}}</H1>
@@ -61,7 +64,7 @@
           </ion-item>
         </ion-list>
       </ion-col>
-      <ion-col *ngIf="!authService.isMD() || segment=='bad'" size="authService.isMD() ? 12 : 4">
+      <ion-col *ngIf="!authService.isMD() || segment=='bad'" size="authService.isMD() ? 12 : 3">
         <ion-list>
           <ion-item lines="none">
             <H1>{{'Own Black List'|translate}}</H1>
@@ -86,7 +89,7 @@
         </ion-list>
       </ion-col>
       <ion-col *ngIf="authService.session.name == 'cephalix' && (!authService.isMD() || segment=='cephalix')"
-        size="authService.isMD() ? 12 : 4">
+        size="authService.isMD() ? 12 : 3">
         <ion-list>
           <ion-item lines="none">
             <H2>{{'CEPHALIX List'|translate}}</H2>
@@ -110,7 +113,7 @@
           </ion-item>
         </ion-list>
       </ion-col>
-      <ion-col *ngIf="!authService.isMD() || segment=='categories'" size="authService.isMD() ? 12 : 4">
+      <ion-col *ngIf="!authService.isMD() || segment=='categories'" size="authService.isMD() ? 12 : 3">
         <ion-list>
           <ion-item lines="none">
             <H2>{{'Denied Categories'|translate}}</H2>
@@ -124,7 +127,22 @@
           </div>
         </ion-list>
       </ion-col>
+      <ion-col *ngIf="!authService.isMD() || segment=='safesearch'" size="authService.isMD() ? 12 : 3">
+        <ion-list>
+          <ion-item lines="none">
 
+            <H2>{{'Activate SafeSearch'|translate}}</H2>
+          </ion-item>
+          <div *ngFor="let safe of safeSearchList; index as i">
+            <ion-item>
+              <ion-label>{{safe.description}}</ion-label>
+              <ion-checkbox slot="end" 
+                (ionChange)="safeSearchList[i].active = !safeSearchList[i].active" [disabled]="saving"
+                [checked]="safe.active"></ion-checkbox>
+            </ion-item>
+          </div>
+        </ion-list>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
