--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -1,54 +1,46 @@
-<ion-grid>
-  <ion-row class="ion-justify-content-center">
-    <ion-col>
-      <ion-card class="ion-text-center">
-        <img src="assets/images/logo/cranix_school.svg" style="height: 200px; width: 200px; padding: 10px">
-        <ion-card-header class="ion-text-center">
-          <h2>{{ instName | async }}</h2>
-        </ion-card-header>
-        <ion-card-content>
-          <form [formGroup]="authForm" style="padding: 15px;">
+<form #authForm="ngForm">
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+        <ion-card class="ion-text-center">
+          <img src="assets/images/logo/cranix_school.svg" style="height: 200px; width: 200px; padding: 10px">
+          <ion-card-header class="ion-text-center">
+            <h2>{{ instName | async }}</h2>
+          </ion-card-header>
+          <ion-card-content *ngIf="!authService.isAllowed('crx2fa.use')">
             <ion-item>
-              <ion-input *ngIf="allowSavePassword" formControlName="username" type="text"
-                placeholder="{{ 'username' | translate }}" autocomplete="off"></ion-input>
-              <input *ngIf="!allowSavePassword" style="border:0ch" formControlName="username" type="text"
-                placeholder="{{ 'username' | translate }}" autocomplete="off" readonly
-                onfocus="this.removeAttribute('readonly');">
+              <ion-input [(ngModel)]="user.username" type="text" placeholder="{{ 'username' | translate }}"
+                autocomplete="off" required></ion-input>
             </ion-item>
-
-            <ion-item lines="none"
-              *ngIf="authForm.controls.username.hasError('required') && authForm.controls.username.touched">
-              <p class="error-text">{{ 'Sorry, field username is required!' | translate }}</p>
-            </ion-item>
-
             <ion-item>
-              <ion-input *ngIf="allowSavePassword" formControlName="password"
-                [type]="showPassword ? 'text' : 'password'" placeholder="{{ 'password' | translate }}"
-                autocomplete="off"></ion-input>
+              <ion-input [(ngModel)]="user.password" [type]="showPassword ? 'text' : 'password'"
+                placeholder="{{ 'password' | translate }}" autocomplete="off" required></ion-input>
               <ion-icon slot="end" [color]="showPassword ? 'primary' : 'medium'" name="eye-off"
                 (click)="showPassword = !showPassword"></ion-icon>
-              <!-- input *ngIf="!allowSavePassword" style="border:0ch" formControlName="password" type="password"
-                placeholder="{{ 'password' | translate }}" autocomplete="off" readonly
-                onfocus="this.removeAttribute('readonly');" -->
             </ion-item>
             <ion-item lines="none"
               *ngIf="authForm.controls.password.hasError('required') && authForm.controls.password.touched">
               <p class="error-text">{{ 'Sorry, field password is required!' | translate }}</p>
             </ion-item>
-          </form>
-        </ion-card-content>
-        <ion-row class="ion-text-center">
-          <ion-col>
-            <ion-button full color="primary" [disabled]="!authForm.valid" style="margin-top: 20px;"
-              (click)="submit(authForm.value)">{{ 'login' | translate }}</ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-card>
-    </ion-col>
-  </ion-row>
-  <ion-footer collapse="fade">
-    <ion-button fill="clear" (click)="authService.showInfo()">
-      <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
-    </ion-button>
-  </ion-footer>
-</ion-grid>
+          </ion-card-content>
+          <ion-card-content *ngIf="authService.isAllowed('crx2fa.use')">
+            <ion-item>
+              <ion-input placeholder="TOTP Pin" [(ngModel)]="totpPin"></ion-input>
+            </ion-item>
+          </ion-card-content>
+          <ion-row class="ion-text-center">
+            <ion-col>
+              <ion-button full color="primary" [disabled]="!authForm.valid" style="margin-top: 20px;"
+                (click)="submit()">{{ 'login' | translate }}</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-footer collapse="fade">
+      <ion-button fill="clear" (click)="authService.showInfo()">
+        <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-footer>
+  </ion-grid>
+</form>
